--- a/public/admin-panel/login.html
+++ b/public/admin-panel/login.html
@@ -1,43 +1,72 @@
-<!-- public/admin-panel/login.html -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Login - Teatro Moscú</title>
+  <title>Moscú Teatro</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <style>
     body {
-      background-color: #1b1b1b;
-      color: white;
+      background-color: #fdf9f6;
+      color: #111;
       display: flex;
       align-items: center;
       justify-content: center;
       height: 100vh;
+      font-family: Arial, sans-serif;
     }
+
     .login-box {
-      background-color: #2a2a2a;
+      background-color: white;
       padding: 2rem;
       border-radius: 1rem;
       width: 100%;
       max-width: 400px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      text-align: center;
+    }
+
+    .login-box img {
+      width: 200px;
+      margin-bottom: 1rem;
+    }
+
+    .login-box h2 {
+      color: #8b0000;
+      margin-bottom: 1.5rem;
+    }
+
+    .form-control {
+      margin-bottom: 1rem;
+    }
+
+    .btn-login {
+      background-color: #8b0000;
+      color: white;
+      font-weight: bold;
+      border: none;
+      padding: 0.5rem 1rem;
+      width: 100%;
+    }
+
+    .btn-login:hover {
+      background-color: #a00000;
+    }
+
+    #error {
+      margin-bottom: 1rem;
     }
   </style>
 </head>
 <body>
   <div class="login-box">
-    <h2 class="text-center mb-4">Login Teatro Moscú</h2>
+    <img src="logo_moscu.png" alt="Logo Teatro Moscú" />
+    <h2>Acceso al Panel</h2>
     <div id="error" class="alert alert-danger d-none">Credenciales incorrectas</div>
     <form onsubmit="login(event)">
-      <div class="mb-3">
-        <label class="form-label">Usuario</label>
-        <input type="text" class="form-control" id="usuario" required>
-      </div>
-      <div class="mb-3">
-        <label class="form-label">Contraseña</label>
-        <input type="password" class="form-control" id="password" required>
-      </div>
-      <button type="submit" class="btn btn-primary w-100">Ingresar</button>
+      <input type="text" class="form-control" id="usuario" placeholder="Usuario" required />
+      <input type="password" class="form-control" id="password" placeholder="Contraseña" required />
+      <button type="submit" class="btn btn-login">Ingresar</button>
     </form>
   </div>
 
