🎭 Alta de alumnos corregida con control de errores y diseño Moscú

--- a/public/admin-panel/login.html
+++ b/public/admin-panel/login.html
@@ -61,7 +61,7 @@
 <body>
   <div class="login-box">
     <img src="logo_moscu.png" alt="Logo Teatro Moscú" />
-    <h2>Acceso al Panel</h2>
+    <h2>Acceso</h2>
     <div id="error" class="alert alert-danger d-none">Credenciales incorrectas</div>
     <form onsubmit="login(event)">
       <input type="text" class="form-control" id="usuario" placeholder="Usuario" required />
