--- a/public/admin-panel/index.html
+++ b/public/admin-panel/index.html
@@ -5,22 +5,87 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Gestión de Alumnos - Moscú</title>
   <style>
-    body { font-family: Arial, sans-serif; background-color: #fdf9f6; color: #111; margin: 0; padding: 0; }
-    header { background-color: #8b0000; color: white; padding: 1rem; text-align: center; }
-    main { padding: 1rem 2rem; }
-    .toolbar { display: flex; flex-wrap: wrap; gap: 0.5rem; margin-bottom: 1rem; }
-    .toolbar input, .toolbar select { padding: 0.5rem; font-size: 1rem; }
-    table { width: 100%; border-collapse: collapse; margin-top: 1rem; }
-    th, td { border: 1px solid #ddd; padding: 0.5rem; text-align: left; }
-    th { background-color: #eee; }
-    .acciones button { margin-right: 0.25rem; }
-    .boton-nuevo { background-color: #8b0000; color: white; border: none; padding: 0.5rem 1rem; cursor: pointer; }
-    .boton-nuevo:hover { background-color: #a00000; }
-    .modal { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.5); justify-content: center; align-items: center; }
-    .modal-content { background: white; padding: 1rem; border-radius: 4px; width: 90%; max-width: 500px; }
-    .modal-content h2 { margin-top: 0; }
-    .modal-content input, .modal-content label { display: block; width: 100%; margin-bottom: 0.5rem; }
-    .modal-content button { margin-top: 1rem; }
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #fdf9f6;
+      color: #111;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background-color: #8b0000;
+      color: white;
+      padding: 1rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    main {
+      padding: 1rem 2rem;
+    }
+    .toolbar {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 0.5rem;
+      margin-bottom: 1rem;
+    }
+    .toolbar input, .toolbar select {
+      padding: 0.5rem;
+      font-size: 1rem;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 1rem;
+    }
+    th, td {
+      border: 1px solid #ddd;
+      padding: 0.5rem;
+      text-align: left;
+    }
+    th {
+      background-color: #eee;
+    }
+    .acciones button {
+      margin-right: 0.25rem;
+    }
+    .boton-nuevo {
+      background-color: #8b0000;
+      color: white;
+      border: none;
+      padding: 0.5rem 1rem;
+      cursor: pointer;
+    }
+    .boton-nuevo:hover {
+      background-color: #a00000;
+    }
+    .modal {
+      display: none;
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.5);
+      justify-content: center;
+      align-items: center;
+    }
+    .modal-content {
+      background: white;
+      padding: 1rem;
+      border-radius: 4px;
+      width: 90%;
+      max-width: 500px;
+    }
+    .modal-content h2 {
+      margin-top: 0;
+    }
+    .modal-content input, .modal-content label {
+      display: block;
+      width: 100%;
+      margin-bottom: 0.5rem;
+    }
+    .modal-content button {
+      margin-top: 1rem;
+    }
   </style>
 </head>
 <body>
@@ -31,12 +96,12 @@
     }
   </script>
 
-  <header style="display: flex; justify-content: space-between; align-items: center;">
-  <h1>Gestión de Alumnos - Teatro Moscú</h1>
-  <button onclick="cerrarSesion()" style="background-color: white; color: #8b0000; border: none; padding: 0.5rem 1rem; cursor: pointer; font-weight: bold;">
-    Cerrar sesión
-  </button>
-</header>
+  <header>
+    <h1>Gestión de Alumnos - Teatro Moscú</h1>
+    <button onclick="cerrarSesion()" style="background-color: white; color: #8b0000; border: none; padding: 0.5rem 1rem; cursor: pointer; font-weight: bold;">
+      Cerrar sesión
+    </button>
+  </header>
 
   <main>
     <div class="toolbar">
@@ -79,78 +144,93 @@
   </div>
 
   <script>
-  function abrirModal() {
-    document.getElementById("modal").style.display = "flex";
-  }
-
-  function cerrarModal() {
-    document.getElementById("modal").style.display = "none";
-  }
-
-  async function guardarAlumno() {
-    const data = {
-      numero_alumno: document.getElementById("numero_alumno").value,
-      nombre: document.getElementById("nombre").value,
-      apellido: document.getElementById("apellido").value,
-      dni: document.getElementById("dni").value,
-      clase: document.getElementById("clase").value,
-      telefono: document.getElementById("telefono").value,
-      fecha_nacimiento: document.getElementById("fecha_nacimiento").value,
-      fecha_ingreso: document.getElementById("fecha_ingreso").value,
-      activo: document.getElementById("activo").checked,
-      foto_url: ""
-    };
-
-    const res = await fetch("/api/alumnos", {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify(data),
-    });
-
-    if (res.ok) {
-      cerrarModal();
-      cargarAlumnos();
-    } else {
-      alert("Error al guardar");
+    function abrirModal() {
+      document.getElementById("modal").style.display = "flex";
     }
-  }
 
-  async function cargarAlumnos() {
-    const res = await fetch('/api/alumnos');
-    const alumnos = await res.json();
-    const cuerpo = document.querySelector("#tabla-alumnos tbody");
-    cuerpo.innerHTML = "";
-    alumnos.forEach((a) => {
-      if (!a.activo && !document.getElementById("ver_inactivos").checked) return;
-      const fila = document.createElement("tr");
-      fila.innerHTML = `
-        <td>${a.numero_alumno}</td><td>${a.nombre}</td><td>${a.apellido}</td><td>${a.dni}</td>
-        <td>${a.clase}</td><td>${a.telefono}</td><td>${a.fecha_nacimiento || ""}</td>
-        <td>${a.fecha_ingreso || ""}</td><td>${a.activo ? "✅" : "❌"}</td>
-        <td>${a.foto_url ? '<img src="' + a.foto_url + '" width="40">' : ''}</td>
-        <td><button onclick="editar(${a.id})">✏️</button><button onclick="eliminar(${a.id})">🗑️</button></td>
-      `;
-      cuerpo.appendChild(fila);
-    });
-  }
+    function cerrarModal() {
+      document.getElementById("modal").style.display = "none";
+    }
 
-  function editar(id) {
-    alert("Función de edición aún no implementada");
-  }
+    async function guardarAlumno() {
+      const data = {
+        numero_alumno: document.getElementById("numero_alumno").value,
+        nombre: document.getElementById("nombre").value,
+        apellido: document.getElementById("apellido").value,
+        dni: document.getElementById("dni").value,
+        clase: document.getElementById("clase").value,
+        telefono: document.getElementById("telefono").value,
+        fecha_nacimiento: document.getElementById("fecha_nacimiento").value,
+        fecha_ingreso: document.getElementById("fecha_ingreso").value,
+        activo: document.getElementById("activo").checked,
+        foto_url: ""
+      };
 
-  function eliminar(id) {
-    alert("Función de eliminación aún no implementada");
-  }
+      console.log("Enviando alumno:", data);
 
-  document.getElementById("ver_inactivos").addEventListener("change", cargarAlumnos);
-  window.addEventListener("load", cargarAlumnos);
+      try {
+        const res = await fetch("/api/alumnos", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json"
+          },
+          body: JSON.stringify(data),
+        });
 
-function cerrarSesion() {
-  localStorage.removeItem('token');
-  window.location.href = 'login.html';
-}
+        if (res.ok) {
+          cerrarModal();
+          cargarAlumnos();
+        } else {
+          const texto = await res.text();
+          console.error("Respuesta del servidor:", texto);
+          alert("Error al guardar");
+        }
+      } catch (error) {
+        console.error("Error inesperado:", error);
+        alert("Error inesperado al guardar");
+      }
+    }
 
-</script>
+    async function cargarAlumnos() {
+      try {
+        const res = await fetch('/api/alumnos');
+        const alumnos = await res.json();
+        const cuerpo = document.querySelector("#tabla-alumnos tbody");
+        cuerpo.innerHTML = "";
+        alumnos.forEach((a) => {
+          if (!a.activo && !document.getElementById("ver_inactivos").checked) return;
+          const fila = document.createElement("tr");
+          fila.innerHTML = `
+            <td>${a.numero_alumno}</td><td>${a.nombre}</td><td>${a.apellido}</td><td>${a.dni}</td>
+            <td>${a.clase}</td><td>${a.telefono}</td><td>${a.fecha_nacimiento || ""}</td>
+            <td>${a.fecha_ingreso || ""}</td><td>${a.activo ? "✅" : "❌"}</td>
+            <td>${a.foto_url ? '<img src="' + a.foto_url + '" width="40">' : ''}</td>
+            <td><button onclick="editar(${a.id})">✏️</button><button onclick="eliminar(${a.id})">🗑️</button></td>
+          `;
+          cuerpo.appendChild(fila);
+        });
+      } catch (error) {
+        console.error("Error al cargar alumnos:", error);
+      }
+    }
+
+    function editar(id) {
+      alert("Función de edición aún no implementada");
+    }
+
+    function eliminar(id) {
+      alert("Función de eliminación aún no implementada");
+    }
+
+    function cerrarSesion() {
+      localStorage.removeItem('token');
+      window.location.href = 'login.html';
+    }
+
+    document.getElementById("ver_inactivos").addEventListener("change", cargarAlumnos);
+    window.addEventListener("load", cargarAlumnos);
+  </script>
 </body>
 </html>
+
 
